# premstats

./: .gitignore  DEVELOPMENT.md  README.md  docker-compose.yml
.github/workflows/: fly-production.yml  fly-review.yml  test.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  fly.production.toml  fly.staging.toml  fly.toml  prestart.sh  pyproject.toml  tests-start.sh
backend/app/: alembic.ini  main.py  models.py  pre_start.py  types.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 282184d23499_initial_migration.py  4ea87909fce2_new_table_for_teams_.py  577532adc254_initial_migration.py  746de7a559a8_new_table_for_teams_.py  8727bf09e7dd_added_stadiums.py  93b45104af8e_initial_migration.py  b802f50cf094_optional_half_time.py  e26340cef275_make_time_an_.py  e629944af192_adding_stadiums.py
backend/app/api/: main.py
backend/app/api/querying/: stats.py  utils.py
backend/app/api/routes/: match.py  referee.py  season.py  stadium.py  team.py
backend/app/core/: config.py  db.py  security.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_referee.py  test_season.py  test_team.py
backend/app/tests/utils/: team.py
backend/scripts/: format.sh
data/: .gitignore  DETAILED_STATS.md  README.md  data_cleaning.py  requirements.txt  upsert_csv_data.py  upsert_match_data.py  upsert_stadium_data.py
premstats-frontend/: .prettierignore  Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
premstats-frontend/api/: query.ts
premstats-frontend/app/: globals.css  layout.tsx  page.tsx
(+10 files in other folders)
